--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "docusaurus deploy && git push",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
-    "dev": "docusaurus serve",
+    "dev": "docusaurus start",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
